--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1176,3 +1176,27 @@ video {
 	--tw-text-opacity: 1;
 	color: rgb(222 201 134 / var(--tw-text-opacity)) /* #dec986 */;
 }
+
+.hover\:bg-primary:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgb(222 201 134 / var(--tw-bg-opacity)) /* #dec986 */;
+}
+
+.shadow-lg {
+	--tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+	--tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color),
+		0 4px 6px -4px var(--tw-shadow-color);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
+		var(--tw-shadow);
+}
+
+.shadow-sm {
+	--tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+	--tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
+		var(--tw-shadow);
+}
+
+.text-center {
+	text-align: center;
+}
