--- a/src/components/TopNavBar/TopNavBar.module.css
+++ b/src/components/TopNavBar/TopNavBar.module.css
@@ -96,6 +96,7 @@
 .signOutButton {
 	position: fixed;
 	top: 70px;
+	right: 0;
 	background-color: #f00; /* Set background color for sign-out button */
 	color: #fff; /* Set text color */
 	border: none; /* Remove border */
