--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -2239,3 +2239,8 @@ video {
 .text-lightGray1 {
 	color: e4e4e4;
 }
+
+.text-darkGreen {
+	--tw-text-opacity: 1;
+	color: rgb(62 204 44 / var(--tw-text-opacity)) /* #3ecc2c */;
+}
