--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -2113,10 +2113,6 @@ video {
 	margin-left: 1rem /* 16px */;
 }
 
-.h-16 {
-	height: 4rem /* 64px */;
-}
-
 .w-1 {
 	width: 0.25rem /* 4px */;
 }
@@ -2216,31 +2212,173 @@ video {
 	margin-left: 24rem /* 384px */;
 }
 
-.m-32 {
-	margin: 8rem /* 128px */;
+.hover\:bg-white:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgb(255 255 255 / var(--tw-bg-opacity)) /* #ffffff */;
 }
 
-.shrink {
-	flex-shrink: 1;
+.rounded-s-lg {
+	border-start-start-radius: 0.5rem /* 8px */;
+	border-end-start-radius: 0.5rem /* 8px */;
 }
 
-.flex-none {
-	flex: none;
+.rounded-e-lg {
+	border-start-end-radius: 0.5rem /* 8px */;
+	border-end-end-radius: 0.5rem /* 8px */;
+}
+
+.mt-6 {
+	margin-top: 1.5rem /* 24px */;
+}
+
+.py-4 {
+	padding-top: 1rem /* 16px */;
+	padding-bottom: 1rem /* 16px */;
+}
+
+.mr-32 {
+	margin-right: 8rem /* 128px */;
+}
+
+.max-w-md {
+	max-width: 28rem /* 448px */;
+}
+
+.max-h-32 {
+	max-height: 8rem /* 128px */;
+}
+.h-28 {
+	height: 7rem /* 112px */;
+}
+
+.overflow-x-auto {
+	overflow-x: auto;
+}
+
+.leading-10 {
+	line-height: 2.5rem /* 40px */;
+}
+
+.leading-3 {
+	line-height: 0.75rem /* 12px */;
+}
+.mx-52 {
+	margin-left: 13rem /* 208px */;
+	margin-right: 13rem /* 208px */;
+}
+
+.leading-5 {
+	line-height: 1.25rem /* 20px */;
+}
+
+.leading-4 {
+	line-height: 1rem /* 16px */;
+}
+.w-2\/3 {
+	width: 66.666667%;
+}
+
+.w-1\/3 {
+	width: 33.333333%;
+}
+
+.w-1\/2 {
+	width: 50%;
+}
+.gap-x-8 {
+	column-gap: 2rem /* 32px */;
+}
+
+.gap-y-4 {
+	row-gap: 1rem /* 16px */;
+}
+
+.w-52 {
+	width: 13rem /* 208px */;
+}
+
+.w-72 {
+	width: 18rem /* 288px */;
+}
+
+.hover\:bg-offWhite:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgb(247 247 247 / var(--tw-bg-opacity)) /* #f7f7f7 */;
+}
+
+.my-7 {
+	margin-top: 1.75rem /* 28px */;
+	margin-bottom: 1.75rem /* 28px */;
+}
+
+.mx-3 {
+	margin-left: 0.75rem /* 12px */;
+	margin-right: 0.75rem /* 12px */;
+}
+
+.hover\:text-offWhite:hover {
+	--tw-text-opacity: 1;
+	color: rgb(247 247 247 / var(--tw-text-opacity)) /* #f7f7f7 */;
+}
+
+.hover\:text-black:hover {
+	--tw-text-opacity: 1;
+	color: rgb(0 0 0 / var(--tw-text-opacity)) /* #000000 */;
+}
+
+.py-2 {
+	padding-top: 0.5rem /* 8px */;
+	padding-bottom: 0.5rem /* 8px */;
+}
+
+.px-3 {
+	padding-left: 0.75rem /* 12px */;
+	padding-right: 0.75rem /* 12px */;
 }
 
 .mr-1 {
 	margin-right: 0.25rem /* 4px */;
 }
 
-.border-lightGray1 {
-	border-color: e4e4e4;
+.bottom-2 {
+	bottom: 0.5rem /* 8px */;
+}
+.right-2 {
+	right: 0.5rem /* 8px */;
 }
 
-.text-lightGray1 {
-	color: e4e4e4;
+.gap-4 {
+	gap: 1rem /* 16px */;
 }
 
-.text-darkGreen {
+.mx-2 {
+	margin-left: 0.5rem /* 8px */;
+	margin-right: 0.5rem /* 8px */;
+}
+
+.w-80 {
+	width: 20rem /* 320px */;
+}
+
+.border-lightGray2 {
+	border-color: d8d8db;
+}
+
+.py-1 {
+	padding-top: 0.25rem /* 4px */;
+	padding-bottom: 0.25rem /* 4px */;
+}
+
+.m-3 {
+	margin: 0.75rem /* 12px */;
+}
+
+.hover\:text-tintWhite:hover {
 	--tw-text-opacity: 1;
-	color: rgb(62 204 44 / var(--tw-text-opacity)) /* #3ecc2c */;
+	color: rgb(243 243 243 / var(--tw-text-opacity)) /* #f3f3f3 */;
+}
+
+.hover\:text-gray:hover {
+	--tw-text-opacity: 1;
+	color: rgb(112 112 112 / var(--tw-text-opacity)) /* #707070 */;
 }
