--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -2400,3 +2400,8 @@ video {
 .ml-1 {
 	margin-left: 0.25rem /* 4px */;
 }
+
+.text-secondary {
+	--tw-text-opacity: 1;
+	color: rgb(255 237 153 / var(--tw-text-opacity)) /* #ffed99 */;
+}
