--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -2405,3 +2405,21 @@ video {
 	--tw-text-opacity: 1;
 	color: rgb(255 237 153 / var(--tw-text-opacity)) /* #ffed99 */;
 }
+
+@media (min-width: 768px) {
+	.md\:w-1\/3 {
+		width: 33.333333%;
+	}
+}
+
+@media (min-width: 768px) {
+	.md\:w-2\/3 {
+		width: 66.666667%;
+	}
+}
+
+@media (min-width: 768px) {
+	.md\:w-full {
+		width: 100%;
+	}
+}
