--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -2491,3 +2491,114 @@ video {
 	margin-top: 0.25rem /* 4px */;
 	margin-bottom: 0.25rem /* 4px */;
 }
+
+@media (min-width: 768px) {
+	.md\:w-auto {
+		width: auto;
+	}
+}
+
+@media (min-width: 768px) {
+	.md\:w-auto {
+		width: auto;
+	}
+}
+
+@media (min-width: 768px) {
+	.md\:text-base {
+		font-size: 1rem /* 16px */;
+		line-height: 1.5rem /* 24px */;
+	}
+}
+
+@media (min-width: 768px) {
+	.md\:px-10 {
+		padding-left: 2.5rem /* 40px */;
+		padding-right: 2.5rem /* 40px */;
+	}
+}
+
+@media (min-width: 768px) {
+	.md\:flex-wrap {
+		flex-wrap: wrap;
+	}
+}
+
+.shadow-sm {
+	--tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+	--tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
+		var(--tw-shadow);
+}
+
+.w-4\/5 {
+	width: 80%;
+}
+
+.w-2\/5 {
+	width: 40%;
+}
+
+.h-auto {
+	height: auto;
+}
+
+.min-h-screen {
+	min-height: 100vh;
+}
+
+.min-h-\[790px\] {
+	min-height: 790px;
+}
+
+@media (min-width: 640px) {
+	.sm\:flex-row {
+		flex-direction: row;
+	}
+}
+
+@media (min-width: 640px) {
+	.sm\:items-center {
+		align-items: center;
+	}
+}
+
+@media (min-width: 640px) {
+	.sm\:my-5 {
+		margin-top: 1.25rem /* 20px */;
+		margin-bottom: 1.25rem /* 20px */;
+	}
+}
+
+@media (min-width: 640px) {
+	.sm\:my-0 {
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+}
+
+@media (min-width: 640px) {
+	.sm\:text-base {
+		font-size: 1rem /* 16px */;
+		line-height: 1.5rem /* 24px */;
+	}
+}
+
+@media (min-width: 640px) {
+	.sm\:w-auto {
+		width: auto;
+	}
+}
+
+@media (min-width: 640px) {
+	.sm\:ml-10 {
+		margin-left: 2.5rem /* 40px */;
+	}
+}
+
+@media (min-width: 640px) {
+	.sm\:my-5 {
+		margin-top: 1.25rem /* 20px */;
+		margin-bottom: 1.25rem /* 20px */;
+	}
+}
