--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -2649,3 +2649,15 @@ video {
 		padding-right: 1.25rem /* 20px */;
 	}
 }
+
+@media (min-width: 640px) {
+	.sm\:hidden {
+		display: none;
+	}
+}
+
+@media (min-width: 768px) {
+	.md\:block {
+		display: block;
+	}
+}
