--- a/src/pages/Admin/LoginPage/Login.module.css
+++ b/src/pages/Admin/LoginPage/Login.module.css
@@ -111,3 +111,13 @@
 .signUpLink a:hover {
 	text-decoration: underline;
 }
+.bg-overlay {
+	background-color: rgba(0, 0, 0, 0.6);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+  }
+  
