--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -2743,3 +2743,14 @@ video {
 		display: flex;
 	}
 }
+
+.hover\:brightness-90:hover {
+	--tw-brightness: brightness(0.9);
+	filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale)
+		var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia)
+		var(--tw-drop-shadow);
+}
+
+.border-none {
+	border-style: none;
+}
