FEAT: Receive at shop

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -2763,3 +2763,7 @@ video {
 	--tw-text-opacity: 1;
 	color: rgb(26 35 126 / var(--tw-text-opacity)) /* #1a237e */;
 }
+
+.border-dashed {
+	border-style: dashed;
+}
