--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1977,12 +1977,6 @@ video {
 	}
 }
 
-@media (min-width: 768px) {
-	.md\:flex-row {
-		flex-direction: row;
-	}
-}
-
 .fixed {
 	position: fixed;
 }
@@ -2558,12 +2552,6 @@ video {
 }
 
 @media (min-width: 640px) {
-	.sm\:items-center {
-		align-items: center;
-	}
-}
-
-@media (min-width: 640px) {
 	.sm\:my-5 {
 		margin-top: 1.25rem /* 20px */;
 		margin-bottom: 1.25rem /* 20px */;
@@ -2778,4 +2766,103 @@ video {
 	.md\:w-\[600px\] {
 		width: 600px;
 	}
+}
+
+.min-w-\[500px\] {
+	min-width: 500px;
+}
+
+.min-w-\[600px\] {
+	min-width: 600px;
+}
+
+@media (min-width: 768px) {
+	.md\:grid-cols-4 {
+		grid-template-columns: repeat(4, minmax(0, 1fr));
+	}
+}
+
+.group:hover .group-hover\:scale-105 {
+	--tw-scale-x: 1.05;
+	--tw-scale-y: 1.05;
+	transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
+		skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
+		scaleY(var(--tw-scale-y));
+}
+
+.mb-8 {
+	margin-bottom: 2rem /* 32px */;
+}
+
+.max-w-5xl {
+	max-width: 64rem /* 1024px */;
+}
+
+.text-xs {
+	font-size: 0.75rem /* 12px */;
+	line-height: 1rem /* 16px */;
+}
+
+.bg-gradient-to-r {
+	background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-white {
+	--tw-gradient-from: #ffffff var(--tw-gradient-from-position);
+	--tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-gray {
+	--tw-gradient-to: #707070 var(--tw-gradient-to-position);
+}
+
+.flex-shrink-0 {
+	flex-shrink: 0;
+}
+
+.to-lightGray {
+	--tw-gradient-to: #dddddd var(--tw-gradient-to-position);
+}
+
+.p-8 {
+	padding: 2rem /* 32px */;
+}
+
+.max-w-7xl {
+	max-width: 80rem /* 1280px */;
+}
+
+@media (min-width: 768px) {
+	.md\:ml-8 {
+		margin-left: 2rem /* 32px */;
+	}
+}
+
+@media (min-width: 768px) {
+	.md\:mt-0 {
+		margin-top: 0px;
+	}
+}
+
+.transition-colors {
+	transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	transition-duration: 150ms;
+}
+
+.hover\:-translate-y-1:hover {
+	--tw-translate-y: -0.25rem /* -4px */;
+	transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate))
+		skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
+		scaleY(var(--tw-scale-y));
+}
+
+.text-gray {
+	--tw-text-opacity: 1;
+	color: rgb(112 112 112 / var(--tw-text-opacity)) /* #707070 */;
+}
+
+.gap-6 {
+	gap: 1.5rem /* 24px */;
 }
