--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -2870,3 +2870,46 @@ video {
 .font-extrabold {
 	font-weight: 800;
 }
+
+.hover\:border:hover {
+	border-width: 1px;
+}
+
+.w-11\/12 {
+	width: 91.666667%;
+}
+
+@media (min-width: 768px) {
+	.md\:w-3\/4 {
+		width: 75%;
+	}
+}
+@media (min-width: 1024px) {
+	.lg\:w-2\/3 {
+		width: 66.666667%;
+	}
+}
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-y-reverse: 0;
+	margin-top: calc(0.75rem /* 12px */ * calc(1 - var(--tw-space-y-reverse)));
+	margin-bottom: calc(0.75rem /* 12px */ * var(--tw-space-y-reverse));
+}
+
+.w-\[400px\] {
+	width: 400px;
+}
+
+.min-w-\[1000px\] {
+	min-width: 1000px;
+}
+
+@media (min-width: 768px) {
+	.md\:w-full {
+		width: 100%;
+	}
+}
+
+.pointer-events-none {
+	pointer-events: none;
+}
